--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Dedication
-main: com.wezro.dedication
+main: com.wezro.dedication.Dedication
 version: 1
 author: Nok
 depend: [Citadel]
@@ -7,3 +7,8 @@ commands:
 dtl:
     description: Shows you how much time is left.
     usage: /dtl
+permissions:
+    dedication.bypass:
+        description: Allows the player to bypass dedication.
+        default: op
+        
