--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>vg.civcraft.mc.citadel</groupId>
             <artifactId>citadel</artifactId>
-            <version>[3.3.1,)</version>
+            <version>3.2.9-2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
